--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.8)
 project(airsniff-ng)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -lreadline -lpcap")
+# Set arguments
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -lreadline -lpcap -lcrafter")
 set(CMAKE_CXX_STANDARD 17)
 
 set(SOURCE_FILES main.cpp color.h)
